--- a/10boxBody1.html
+++ b/10boxBody1.html
@@ -23,12 +23,12 @@ electrons, protons and neutrons
 <a href="#" id="makeVisible">1</a>
 </h3>
 <div id="body1" style="visibility: hidden;">
-<h3>you feel at home in your body, yet stay open to explore more of who you <a href="4boxAre.html" id="V1">are</a>
+<h3>you feel at home in your body or are you open to<a href="4boxAre.html" id="V1"> explore more</a> of who you are?
 <br><br>
 <a href="#" id="makeVisible2">2</a><h3></h3>
 <div id="body2" style="visibility: hidden;"> 
 <h3>    
- you worry about your body, but begin to see yourself with kindness — stepping out of the <a href="16boxLooping.html" id="V2">loop</a> of old thoughts <br><br>
+ you worry about your body, but begin to see yourself with kindness — are you ready to <a href="16boxLooping.html" id="V2"> step out of the loops</a> of old thoughts?<br><br>
 <a href="#" id="makeVisible3">3</a>  
 </h3>
 </div> 
@@ -37,11 +37,6 @@ electrons, protons and neutrons
 </h3>   
 </div>
 </div>    
-
-
-
-
-    </div>
 
 </body>
 
@@ -68,7 +63,6 @@ electrons, protons and neutrons
     });
     
 
-
-</script>
+    </script>
 </html>
 
