--- a/14boxSoul.html
+++ b/14boxSoul.html
@@ -16,8 +16,9 @@
         </div> 
     <h3>
       Infinite Soul <br><br>   
-      Be like the Lotus Flower; trust in the Light, surpass the mud, believe in new beginnings whenever you doubt your self-worth.      
-<br><br> <a href="15boxDance.html" id="soul1">MAKE THE MOVE</a> The Universe respons to movement. 
+      For anyone still blooming: your soul is timeless. 
+      <br><br>Surpass the mud, believe in new beginnings whenever you doubt your self-worth      
+<br><br> <a href="15boxDance.html" id="soul1">MAKE THE MOVE</a> the Universe moves with you 
 
 
 
@@ -26,9 +27,6 @@
 
 </body>
 <script>
-
-
-
 
 </script>
 </html>
