--- a/15boxDance.html
+++ b/15boxDance.html
@@ -11,30 +11,30 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="4boxAre.html">↩️undo</a>      
+            <a href="4boxAre.html">↩️back</a>      
             <!--<a>↪️redo</a>-->
         </div> 
     <h3>
-        Manifestation is a dance.<br><br>Here is a game to find balance: 
-        <br><br>-Chakras are like flower vortexes with circular movement of energy <br>
-        <br> 
-        <a href="21nameRoot.html" id="danceRoot">Root</a>
+        Manifestation is a dance.<br><br>Ready to play? choose an element.  
+        <br><br>Each element shift your inner landscape, turning heaviness into clarity. <br><br>Your chakras -spinning flower vortexes- distribute life force energy through your holographic body<br>
+        <br>Select your element:<br><br> 
+        <a href="21nameRoot.html" id="danceRoot">EARTH / Root Chakra</a>
         <br><br>
-        <a href="22nameSacral.html" id="danceSacral">Sacral</a>
+        <a href="22nameSacral.html" id="danceSacral">WATER / Sacral Chakra</a>
         <br><br>
-        <a href="23namePlexus.html" id="dancePlexus">Plexus</a>
+        <a href="23namePlexus.html" id="dancePlexus">FIRE / Plexus Chakra</a>
         <br><br>
-        <a href="24nameHeart.html" id="danceHeart">Heart</a>
+        <a href="24nameHeart.html" id="danceHeart">AIR / Hearth Chakra</a>
 
         <h3>
-        -Visualize transforming some negative impressions and replace them with positive ones. <br><br> -Chakras distribute the life force energy to our
-        holographic body and different organs.
+       
 
     </h3>
     </div>
 
 </body>
 <script>
+
 
 
 
