--- a/18nameFight.html
+++ b/18nameFight.html
@@ -13,15 +13,14 @@
             <a href="16boxLooping.html" id="menuLoop">↩️back</a> 
         </div>    
     <h3>FIGHT<br>
-        <br>
+        
         -Hyper-defensiveness,<br><br> 
         -readiness to fight <br><br>
         -Control, dominance, rage 
 
       <br><br>you have the power to change the story.<br><br>
-                This dance can help you out,
-                <a href="15boxDance.html" id="fight1">find balance.</a> No Mud, No Lotus Flower. 
-
+                Explore a dance combining: <a href="15boxDance.html" id="fight1"> Earth and Fire</a> to help you find balance.<br><br>
+                
     </h3>
     </div>
 
