--- a/19nameFlight.html
+++ b/19nameFlight.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<h3><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,14 +13,14 @@
             <a href="16boxLooping.html" id="menuLoop">↩️back</a> 
         </div>
     <h3>FLIGHT
-        <br><br>
+        <br>
         -Restlessness, fear of danger <br><br> 
         -Repeating due to anxiety <br><br>
         -Emotional detachment, avoidance <br><br>
 
         <br>you have the power to change the story.<br><br>
-                This dance can help you out,
-                <a href="15boxDance.html" id="flight1">find balance</a>. No Mud, No Lotus Flower. 
+                Explore a dance combining: <a href="15boxDance.html" id="flight1"> Earth and Water</a> to help you find balance.<br><br>
+                
 
     </h3>
     </div>
