--- a/1start1.html
+++ b/1start1.html
@@ -19,5 +19,8 @@ that allow us to <a id="btn" href="2start2.html" class="story-link">affirm</a>
 
 </body>
 
-
+<script>
+   
+   </script>
+   
 </html>
