--- a/20nameFawn.html
+++ b/20nameFawn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<h3><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,15 +13,15 @@
             <a href="16boxLooping.html" id="menuLoop">↩️back</a> 
         </div> 
     <h3>FAWN
-        <br><br>
-        -Over-merging, people-pleasing, codependency. <br><br>
+        <br>
+        -Overmerging, people-pleasing, codependency. <br><br>
         -Overexplaining to avoid misunderstanding or criticism <br><br>
         -Loving to gain approval, losing self in others. <br><br>
         -Oversharing to gain approval or avoid conflict <br><br>
         
-        <br>you have the power to change the story.
-                <br><br>This dance can help you out,
-                <a href="15boxDance.html" id="fawn1">find balance</a>. No Mud, No Lotus Flower. 
+        you have the power to change the story.
+                <br><br>Explore a dance combining: <a href="15boxDance.html" id="fawn1"> Water and Air</a> to help you find balance.<br><br>
+              
               </h3>
     </div>
 
