--- a/21nameRoot.html
+++ b/21nameRoot.html
@@ -10,15 +10,16 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="15boxDance.html" id="menuChakra">↩️back</a>  
+            <a href="15boxDance.html" id="menuChakra">↩️back to elements</a>  
         </div> 
             <h3>
-                ROOT
+                EARTH / ROOT
                 <br>
 Safety, grounding, survival<br><br>
-Move:<br>-Stomping & Shaking Dance<br> -Barefoot grounding, strong legs, stomps, bouncing, squats. <br>-Visualize rooting into earth.
+Move:<br>-Stomping & Shaking Dance<br> -Barefoot grounding, strong legs, stomps, bouncing, squats. <br>-Visualize rooting into Earth
 <br><br>
-✅ <a href="25boxOutroRestart.html" id="outro">Reclaims</a> primal power safely and grounds it.
+✅ Reclaims primal power safely and grounds it <br><br> Want to explore one more element?<br><br> <a href="15boxDance.html" id="menuChakra2">YES, let's keep moving</a><br><br> <a href="25boxOutroRestart.html" id="outro"> NO, balance achieved</a> 
+
             </h3>
         
             </div>
@@ -31,7 +32,6 @@ Move:<br>-Stomping & Shaking Dance<br> -Barefoot grounding, strong legs, stomps,
 <body>
 
 <script>
-
 
 </script>
 </html>
