--- a/22nameSacral.html
+++ b/22nameSacral.html
@@ -10,21 +10,21 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="15boxDance.html" id="menuChakra">↩️back</a>  
+            <a href="15boxDance.html" id="menuChakra">↩️back to elements</a>  
         </div>
-    <h3>SACRAL
+    <h3>WATER / SACRAL
         <br>
-        Emotions, pleasure, boundaries, relationships. <br><br>Move:<br>
-        -Hip Circles & Undulations, "8 shape" <br><br>-Fluid hips, belly waves, spirals, sensual self-touch, water-like motions. <br><br>-Eyes closed for inner connection.
+        Emotions, pleasure, boundaries, relationships <br><br>Move:<br>
+        -Hip Circles & Undulations, "8 shape" <br><br>-Fluid hips, belly waves, spirals, sensual self-touch, water-like motions <br><br>-Eyes closed for inner connection
         <br><br>
-        ✅ <a href="25boxOutroRestart.html" id="outro">Brings</a> presence back into the body and soothes overactivity.
+        ✅ Brings presence back into the body and soothes overactivity
+        <br><br>Want to explore one more element?<br><br> <a href="15boxDance.html" id="menuChakra2">YES, let's keep moving</a><br><br> <a href="25boxOutroRestart.html" id="outro"> NO, balance achieved</a>
     </h3>
     </div>
 
 </body>
 
 <script>
-
 
 </script>
 </html>
