--- a/23namePlexus.html
+++ b/23namePlexus.html
@@ -10,13 +10,14 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="15boxDance.html" id="menuChakra">↩️back</a>  
+            <a href="15boxDance.html" id="menuChakra">↩️back to elements</a>  
         </div>   
-    <h3>PLEXUS
+    <h3>FIRE / PLEXUS
         <br>
         Power, will, self-worth <br><br>
-        Move:<br>-Power Poses & Martial Dance <br><br>-Punching air, strong warrior poses <br><br>-Solar breath (inhale arms up, exhale push down), core activation.<br><br>
-        <br>✅ Gently <a href="25boxOutroRestart.html" id="outro">melts</a> paralysis and reclaims vitality
+        Move:<br>-Power Poses & Martial Dance <br><br>-Punching air, strong warrior poses <br><br>-Solar breath (inhale arms up, exhale push down), core activation<br><br>
+        <br>✅ Gently melts paralysis and reclaims vitality
+        <br><br> Want to explore one more element?<br><br> <a href="15boxDance.html" id="menuChakra2">YES, let's keep moving</a><br><br> <a href="25boxOutroRestart.html" id="outro"> NO, balance achieved</a>
     </h3>
     </div>
 
@@ -24,7 +25,6 @@
 
 
 <script>
-
 
 </script>
 </html>
