--- a/24nameHeart.html
+++ b/24nameHeart.html
@@ -10,14 +10,15 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="15boxDance.html" id="menuChakra">↩️back</a>  
+            <a href="15boxDance.html" id="menuChakra">↩️back to elements</a>  
         </div>   
     <h3>
-        HEART
+        AIR / HEART
         <br>
-        Love, Connection, Self Compassion, Expansion, Flow.<br><br> Move:<br>
-        -Arms open and close, embrace self, sway side to side <br>-Heart-level movements. <br>-Eye contact (if safe), mirror work.<br>
-        <br>✅ <a href="25boxOutroRestart.html" id="outro">Reclaims</a> self-honoring and emotional sovereignty.
+        Love, Connection, Self Compassion, Expansion, Flow <br><br> Move:<br>
+        -Arms open and close, embrace self, sway side to side <br>-Heart-level movements <br>-Eye contact (if safe), mirror work <br>
+        <br>✅ Reclaims self-honoring and emotional sovereignty
+        <br><br> Want to explore one more element?<br><br> <a href="15boxDance.html" id="menuChakra2">YES, let's keep moving</a><br><br> <a href="25boxOutroRestart.html" id="outro"> NO, balance achieved</a>
     </h3>
     </div>
 
@@ -25,7 +26,6 @@
 
 
 <script>
-
 
 </script>
 </html>
