--- a/25boxOutroRestart.html
+++ b/25boxOutroRestart.html
@@ -11,14 +11,14 @@
     <div class="container">
     <h3>
       Congratulations !!! <br>
-      you have scrolled all the Pages,<br><br>
+      you have scrolled all the Internet,<br><br>
       You are LED LIGHT<br> <br>
       
       step by step, you are closer to <br> Formless Divinity,
       <br><br>may all beings in all the worlds<br>be happy and free.<br>
       
         <br>
-        <a href="1start1.html" id="outro2">Reset</a>
+        <a href="1start1.html" id="outro2">Or did you not feel free?</a>
     </h3>
     </div>
 
@@ -26,7 +26,6 @@
 
 
 <script>
-
 
 </script>
 
