--- a/5boxWatching.html
+++ b/5boxWatching.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<h3><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,15 +14,15 @@
         </div>   
 <h3>we all need to be more comfortable <br><br>
 and letting go
-and looking silly, <br><br><a href="4boxAre.html" id="watch1"> risking</a> more
-and <br><br>being more willing to fail <br><br>
-specially when the only thing at risk is our ego. 
+and looking silly, <br><br>specially when the only thing at risk is our ego<br><br>are you <a href="4boxAre.html" id="watch1"> willing to risk</a> more?
+<br><br>
+ 
     </h3>
     </div>
 
 </body>
 <script>
-  
+
 
 </script>
 </html>
