--- a/17nameFreeze.html
+++ b/17nameFreeze.html
@@ -17,12 +17,12 @@
                     <a href="16boxLooping.html" id="menuLoop">↩️ back</a>    
                 </div> 
             <h3>FREEZE
-                <br><br>
+                <br>
                 -Immobilization, dissociation, numbness <br><br>-Repeating due to mental fog<br><br>-Powerlessness, stuck identity 
                 <br><br>-Closed heart, inability to receive love <br> 
                 <br>you have the power to change the story.<br><br>
-                This dance can help you out,
-                <a href="15boxDance.html" id="freeze1">find balance.</a> No Mud, No Lotus Flower. 
+                Explore a dance combining: <a href="15boxDance.html" id="freeze1"> Earth, Fire and Air</a> to help you find balance.<br><br>
+                 
             </h3>
             </div>
         
