--- a/6boxPC1.html
+++ b/6boxPC1.html
@@ -14,8 +14,8 @@
         </div>  
 <h3>
   <br>
-you are not a machine,<br>
-you are the original intelligence,<br>
+you are not a machine,
+you are the original intelligence<br><br>
 with practice you can excel the power of the mind<br>
 <br>
 <a href="#" id="makeVisible">1</a>
@@ -25,12 +25,12 @@ with practice you can excel the power of the mind<br>
         </h3>
         <a href="#" id="makeVisible2">2</a>
         <div id="boxPC3" style="visibility: hidden;">
-          <h3>with awareness and practice, your mind can flow beyond its own <a href="16boxLooping.html" id="pc1">loops</a>
+          <h3>with awareness and practice, your mind can flow. Are you ready to <a href="16boxLooping.html" id="pc1">move beyond the loops?</a>
             <br>
             <br>
             <a href="#" id="makeVisible3">3</a></h3>
             <div id="boxPC4" style="visibility: hidden;">
-              <h3>you are methodic, yet stay open to explore more of who you <a href="4boxAre.html" id="pc2">are</a>
+              <h3>are you a methodical robot or <a href="4boxAre.html" id="pc2"> an ancient cosmic jellyfish?</a>
                 <br>
                 <br>
                 Remember, nerds can dance !</h3>
@@ -65,6 +65,5 @@ with practice you can excel the power of the mind<br>
     });
 
 
-
-</script>
+    </script>
 </html>
