--- a/4boxAre.html
+++ b/4boxAre.html
@@ -1,4 +1,4 @@
-<h3><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,3 +36,4 @@ its not about pleasing who is <a href="5boxWatching.html" id="are4">watching</a>
 </script>
 
 </html>
+
