--- a/16boxLooping.html
+++ b/16boxLooping.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
        
-    <h3><!DOCTYPE html>
+    <!DOCTYPE html>
         <html lang="en">
         <head>
             <meta charset="UTF-8">
@@ -56,3 +56,4 @@
 </script>
 
 </html>
+
