--- a/6boxPC1.html
+++ b/6boxPC1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<h3><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,3 +68,4 @@ with practice you can excel the power of the mind<br>
     </script>
 
 </html>
+
