css and html elements update

--- a/10boxBody1.html
+++ b/10boxBody1.html
@@ -18,10 +18,12 @@
 carbon molecules
 amino acids
 electrons, protons and neutrons
+
 <br>
 <br>
 <a href="#" id="makeVisible">1</a>
 </h3>
+</div>
 <div id="body1" style="visibility: hidden;">
 <h3>you feel at home in your body or are you open to<a href="4boxAre.html" id="V1"> explore more</a> of who you are?
 <br><br>
